tests/paczka1/small_fuzzy/59080798.err
Error in line 5: Gjv3H S533 -1,7
Error in line 1: lTLx S533 15,4
Error in line 7: lTLx A683 72,3
Error in line 14: S862 S533 -3,5
Error in line 2: uoew S862 16,7
